--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "expo start --dev-client",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "api": "json-server ./src/services/server.json --host 192.168.1.3 --port 3333 --delay 1000"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "axios": "^0.27.2",
+    "date-fns": "^2.29.2",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
