--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "api": "json-server ./src/services/server.json --host 192.168.1.8 --port 3333 --delay 1000"
+    "api": "json-server ./src/services/server.json --host 192.168.1.12 --port 3333 --delay 1000"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
@@ -26,6 +26,7 @@
     "react-native-calendars": "^1.1288.2",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "~2.9.1",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
