--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "api": "json-server ./src/services/server.json --host 192.168.1.12 --port 3333 --delay 1000"
   },
   "resolutions": {
-    "@types/react": "^17"
+    "@types/react": "^18.0.21"
   },
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.2",
     "@expo-google-fonts/inter": "^0.2.2",
     "@nozbe/watermelondb": "^0.24.0",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
+    "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
+    "expo-image-picker": "~13.3.1",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "lottie-react-native": "5.1.3",
@@ -44,7 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-decorators": "^7.19.1",
-    "@types/react": "~18.0.0",
+    "@types/react": "^18.0.21",
     "@types/react-native": "~0.69.1",
     "@types/react-native-calendars": "^1.1264.3",
     "@types/styled-components-react-native": "^5.1.3",
